@@ -1,19 +1,19 @@
 package slogo.controller.operations;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import slogo.controller.CommandsMapHelper;
+import slogo.controller.CommandsMapHelper.SyntaxHelper;
 import slogo.controller.TurtleManager;
 import slogo.controller.UserDefinedFields;
 import slogo.controller.listings.BasicSyntax;
+import slogo.controller.listings.MovingObjectProperties;
 import slogo.exceptions.InvalidArgumentException;
 import slogo.model.Turtle;
 
 public class UserOperations extends Operations{
 
-  private CommandsMapHelper commandsMapHelper = new CommandsMapHelper();
+  public static final int TRIM = 2;
 
   public static final String LOOP_EXPR = ":repcount";
 
@@ -21,28 +21,30 @@ public class UserOperations extends Operations{
     super(turtle, userDefinedFields, tm);
 
   }
-//
-//  public Double makeVariable(String variable, Double expr) throws InvalidArgumentException {
-//    if (!commandsMapHelper.isType(variable, BasicSyntax.VARIABLE)) {
-//      throw new InvalidArgumentException("The first argument is not in the form of a variable.");
-//    }
-//    userVars.put(variable, expr);
-//    return expr;
-//  }
-//
+
+  public Double makeVariable(String variable, Double expr) throws InvalidArgumentException {
+    if (!SyntaxHelper.isType(variable, BasicSyntax.VARIABLE)) {
+      throw new InvalidArgumentException("The first argument is not in the form of a variable.");
+    }
+    userDefinedFields.putUserVar(variable, expr);
+    return expr;
+  }
+
 //  public String repeat(Integer expr, String commands) {
 //    return loop(1, expr,1, commands, LOOP_EXPR);
 //  }
 //
-//  private String loop(Integer start, Integer end, Integer increment, String commands, String variable) {
-//    StringBuilder sb = new StringBuilder();
-//    userVars.put(variable, new Double(start));
-//    String as = commands.substring(2, commands.length() - 1);
-//    for (; userVars.get(variable) <= end; userVars.put(variable, userVars.get(variable) + increment)) {
-//      sb.append(as);
-//    }
-//    return sb.toString();
-//  }
+  private void loop(Integer start, Integer end, Integer increment, String commands, String variable)
+      throws InvalidArgumentException {
+    StringBuilder sb = new StringBuilder();
+    userDefinedFields.putUserVar(variable, Double.valueOf(start));
+    String as = commands.substring(TRIM, commands.length() - TRIM);
+    for (; userDefinedFields.getUserVar(variable) <= end; userDefinedFields.incrementVarBy(variable, Double.valueOf(increment))) {
+      sb.append(as);
+      sb.append(" ");
+    }
+    userDefinedFields.setExtraCommands(sb.toString());
+  }
 //
 //   public String doTimes(String vl, String commands) throws InvalidArgumentException {
 //    String variable = vl.split(" ")[1];
@@ -73,24 +75,37 @@ public class UserOperations extends Operations{
 //     }
 //   }
 //
-//  public String IF(Integer expr, String commands) {
-//    if (expr != 0) {
-//      return commands.substring(2, commands.length() - 1);
-//    } else {
-//      return " ";
-//    }
-//  }
-//
-//  public String ifElse(Integer expr, String trueCommands, String falsecommands) {
-//    if (expr != 0) {
-//      return trueCommands.substring(2, trueCommands.length() - 1);
-//    } else {
-//      return falsecommands.substring(2, falsecommands.length() - 1);
-//    }
-//  }
-//
-//  public void makeUserInstruction(String commandName, String variables, String commands) {
-//    List<String> current = new ArrayList<>(Arrays.asList(variables, commands.substring(2, commands.length() - 2)));
-//    functions.put(commandName, current);
-//  }
+  public void IF(Integer expr, String commands) {
+    if (expr != 0) {
+      userDefinedFields.setExtraCommands(commands.substring(2, commands.length() - 2));
+    } else {
+      turtle.getState().put(MovingObjectProperties.RETURN_VALUE, 0);
+    }
+  }
+
+  public void ifElse(Integer expr, String trueCommands, String falsecommands) {
+    if (expr != 0) {
+      userDefinedFields.setExtraCommands(trueCommands.substring(TRIM, trueCommands.length() - TRIM));
+    } else {
+      userDefinedFields.setExtraCommands(falsecommands.substring(TRIM, falsecommands.length() - TRIM));
+    }
+  }
+
+  public void makeUserInstruction(String commandName, String variables, String commands)
+      throws InvalidArgumentException {
+    List<String> current = new ArrayList<>(
+        Collections.singletonList(commands.substring(TRIM, commands.length() - TRIM)));
+    if (variables.length() > TRIM * 2) {
+      String[] vars = variables.substring(TRIM, variables.length() - TRIM).split(" ");
+      for (String v : vars) {
+        if (!SyntaxHelper.isType(v, BasicSyntax.VARIABLE)) {
+          throw new InvalidArgumentException(
+              "Variable " + v + " passed in with function " + commandName
+                  + " is not an valid variable");
+        }
+        current.add(v);
+      }
+    }
+    userDefinedFields.putFunction(commandName, current);
+  }
 }
